# ComfyUI-WanVideoAutoResize

./: README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
